--- a/ansible_collections/pedrohdz/devenv/roles/packages/tasks/process-brew.yaml
+++ b/ansible_collections/pedrohdz/devenv/roles/packages/tasks/process-brew.yaml
@@ -1,4 +1,6 @@
 ---
 - ansible.builtin.fail:
     msg: Homebrew support has not beed added to pedrohdz.devenv.roles.package yet.
+  tags:
+    - pedrohdz_devenv_packages
 ...
