Fixed typo in 'include_tasks: process-apt.yaml'

--- a/ansible_collections/pedrohdz/devenv/roles/packages/tasks/main.yaml
+++ b/ansible_collections/pedrohdz/devenv/roles/packages/tasks/main.yaml
@@ -70,7 +70,7 @@
     - pedrohdz_devenv_packages
 
 - include_tasks: process-apt.yaml
-  when: _packages_dist_pkg_mgr == 'brew'
+  when: _packages_dist_pkg_mgr == 'apt'
   tags:
     - pedrohdz_devenv_packages
 ...
